# YuvWater3

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yuvwater3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/yuvwater3/: CreateNumberAct.java  MainActivity.java
app/src/main/java/com/example/yuvwater3/jni/: YuvOsdUtils.java
app/src/main/java/com/example/yuvwater3/monitor/: CameraWrapper.java  MediaCodecManager.java  MonitorVideoManager.java  MuxerData.java  MuxerManager.java
app/src/main/java/com/example/yuvwater3/utils/: FileUtil.java  JavaTest.java  Logger1.java  ThreadManager.java  Utils.java
app/src/main/jni/: YuvOsdUtils.c  YuvOsdUtils.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yuvwater3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
